<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_ElmoGDCBellCoE" Id="{91acbbac-f6fe-4d79-9df9-4139d2e826f8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ElmoGDCBellCoE
VAR_IN_OUT
	stCoE	:	ST_ElmoGDCBellCoEParams;
END_VAR
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbCoERead	:	FB_CoERead_ByDriveRef;
	// To make up for not having a .bDone output
	ftCoeReadBusy: F_TRIG;
	CaseVar: INT := 1;
	udiIP	:	UDINT;
	uiChecksum	:	UDINT;
END_VAR
VAR CONSTANT
	c5VSupply : ST_CoEIndSub := (nIndex:=16#2206, nSubIndex:=0);
	cDriveTemp : ST_CoEIndSub := (nIndex:=16#22A3, nSubIndex:=1);
	cIP : ST_CoEIndSub := (nIndex:=16#1111, nSubIndex:=1);
	cParamChksm	:	ST_CoEIndSub := (nIndex:=16#2060, nSubIndex:=0);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* A. Wallace 17-3-22
ElmoMC Gold DC Bell CoE Read

This FB cyclically reads CoE Parameters from the ElmoMC drives.
*)

CASE CaseVar OF
	
1:
//Drive temperature
fbCoERead.nIndex := cDriveTemp.nIndex;
fbCoERead.nSubIndex := cDriveTemp.nSubIndex;
fbCoERead.pDstBuf := ADR(stCoE.uiDriveTemp);
fbCoERead.cbBufLen := SIZEOF(stCoE.uiDriveTemp);
2:
//5v supply
fbCoERead.nIndex := c5vSupply.nIndex;
fbCoERead.nSubIndex := c5vSupply.nSubIndex;
fbCoERead.pDstBuf := ADR(stCoE.ui5VSupply);
fbCoERead.cbBufLen := SIZEOF(stCoE.ui5VSupply);
3:
//Parameter checksum
fbCoERead.nIndex := cParamChksm.nIndex;
fbCoERead.nSubIndex := cParamChksm.nSubIndex;
fbCoERead.pDstBuf := ADR(uiChecksum);
fbCoERead.cbBufLen := SIZEOF(uiChecksum);
4:
//IP
fbCoERead.nIndex := cIP.nIndex;
fbCoERead.nSubIndex := cIP.nSubIndex;
fbCoERead.pDstBuf := ADR(udiIP);
fbCoERead.cbBufLen := SIZEOF(udiIP);
END_CASE


fbCoERead.bExecute := TRUE;
ftCoeReadBusy(CLK:=fbCoERead.bBusy);
IF ftCoeReadBusy.Q THEN
	fbCoERead.bExecute := FALSE;
	//<TODO> check for errors
	IF NOT fbCoERead.bError THEN
		//Switch to the other case
		CaseVar := CaseVar + 1;
		IF CaseVar > 3 THEN CaseVar := 1; END_IF
	ELSE
		;
	END_IF
END_IF

ACT_CoEReadFB();]]></ST>
    </Implementation>
    <Action Name="ACT_CoEReadFB" Id="{854d3f04-b0de-4b54-adaa-712dc279dab2}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="BoxType">"FB_CoERead_ByDriveRef"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"fbCoERead"</v>
                          <v n="Type">""</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Extensible">false</v>
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">2L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">4L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">5L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">6L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">7L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Extensible">false</v>
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"stCoE.stDriveRef"</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">9L</v>
                            </o>
                            <v n="Id">8L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">11L</v>
                            </o>
                            <v n="Id">10L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">13L</v>
                            </o>
                            <v n="Id">12L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">15L</v>
                            </o>
                            <v n="Id">14L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">17L</v>
                            </o>
                            <v n="Id">16L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">19L</v>
                            </o>
                            <v n="Id">18L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">21L</v>
                            </o>
                            <v n="Id">20L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">""</v>
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Extensible">false</v>
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">23L</v>
                            </o>
                            <v n="Id">22L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>stDriveRef</v>
                            <v>nIndex</v>
                            <v>nSubIndex</v>
                            <v>pDstBuf</v>
                            <v>cbBufLen</v>
                            <v>bExecute</v>
                            <v>tTimeout</v>
                            <v>bCompleteAccess</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>ST_DriveRef</v>
                            <v>WORD</v>
                            <v>BYTE</v>
                            <v>PVOID</v>
                            <v>UDINT</v>
                            <v>BOOL</v>
                            <v>TIME</v>
                            <v>BOOL</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>bBusy</v>
                            <v>bError</v>
                            <v>iAdsErrId</v>
                            <v>iCANopenErrId</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>UINT</v>
                            <v>UINT</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <n n="EN" />
                        <n n="ENO" />
                        <n n="STSnippet" />
                        <v n="Id">3L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">1</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <LineIds Name="FB_ElmoGDCBellCoE">
      <LineId Id="3" Count="48" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>